[B] Fix text clipping through container
[Fixes #401]

--- a/client/src/theme/STACSS/_typography.scss
+++ b/client/src/theme/STACSS/_typography.scss
@@ -82,6 +82,12 @@
   @include utilityPrimary;
 }
 
+@mixin resetWordWrap {
+  overflow-wrap: normal;
+  word-wrap: normal;
+  hyphens: none;
+}
+
 
 // Labels
 // --------------------------------------------------------
